--- a/NEWS
+++ b/NEWS
@@ -1,17 +1,11 @@
 #############################
-Version 0.1.8
+Version 0.1.9
 New:
 	Values on the X-Axis can be others than wavelengths; the denominator can be specified in the metadata.
-
-
-
-
-
-
-
-
-
-
+	
+Bugfix:
+	Repaired custom color vectors in Aquagrams.
+	Other small bugfixes.
 #############################
 
 
