--- a/NEWS
+++ b/NEWS
@@ -2,7 +2,7 @@
 Version 0.2.0
 New:
 	Added classifiers.
-	
+	Function to select and possibly average groups of wavelengths (function siWlg).
 
 
 Improved:
