--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,16 @@
 #############################
+Version 0.4.0
+New:
+	
+Improved:
+	
+Bugfix:
+	
+#############################
+
+
+
+#############################
 Version 0.3.2
 New:
 	
