--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,17 @@
 #############################
+Version 0.4.2
+New:
+	Create new variables via combining pre-existent values or by calculating a new value using an arbitrary expression.
+	
+Improved:
+	
+Bugfix:
+	Various small bugfixes (e.g. the show-method for aquap_data)	
+#############################
+
+
+
+#############################
 Version 0.4.1
 New:
 	Added merging of datasets.
